[gd_scene load_steps=8 format=3 uid="uid://dogvn20isp66v"]

[ext_resource type="Script" uid="uid://dlxly0ly0n0gx" path="res://main-menu/settingsscene/script/audio_settings.gd" id="1_y5kqf"]
[ext_resource type="Theme" uid="uid://cqmt4obqoeysj" path="res://main-menu/UI/panel_theme.tres" id="2_na84f"]
[ext_resource type="Texture2D" uid="uid://rt8qs3bs62m3" path="res://main-menu/UI/mainmenubackground.png" id="3_v36f8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikcl0"]
bg_color = Color(0.461219, 0.720285, 0.900154, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2hje"]
bg_color = Color(0.462745, 0.721569, 0.898039, 1)

[sub_resource type="Theme" id="Theme_kxxe0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_656l2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y5kqf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.5
offset_top = -325.0
offset_right = 577.5
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_na84f")
theme_override_styles/panel = SubResource("StyleBoxFlat_ikcl0")
metadata/_edit_use_anchors_ = true

[node name="Mainmenubackground" type="Sprite2D" parent="Panel"]
position = Vector2(579, 326.5)
scale = Vector2(0.604688, 0.60463)
texture = ExtResource("3_v36f8")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(245, 0, 246, 178, 247, 648)
default_color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="audio_button" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 62.0
offset_right = 219.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_x2hje")
text = "Audio"

[node name="graphics_button" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 171.0
offset_right = 221.0
offset_bottom = 268.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_x2hje")
text = "Graphics"

[node name="ingame_button" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 283.0
offset_right = 221.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_x2hje")
text = "Ingame"

[node name="master_volume_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 110.0
offset_right = 949.0
offset_bottom = 126.0
theme = SubResource("Theme_kxxe0")
max_value = 1.5
step = 0.001

[node name="music_volume_slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 297.0
offset_top = 227.0
offset_right = 942.0
offset_bottom = 243.0
max_value = 1.5
step = 0.001

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 52.0
offset_right = 584.0
offset_bottom = 96.0
theme_override_font_sizes/normal_font_size = 30
text = "Master Volume"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 302.0
offset_top = 170.0
offset_right = 586.0
offset_bottom = 216.0
theme_override_font_sizes/normal_font_size = 30
text = "Music Volume"

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = -18.0
offset_top = 515.0
offset_right = 131.0
offset_bottom = 655.0
theme_override_colors/font_color = Color(2.21401e-06, 0.442781, 0.667156, 1)
theme_override_font_sizes/font_size = 96
theme_override_styles/normal = SubResource("StyleBoxFlat_656l2")
text = "â†¶
"

[connection signal="pressed" from="graphics_button" to="." method="_on_graphics_button_pressed"]
[connection signal="pressed" from="ingame_button" to="." method="_on_ingame_button_pressed"]
[connection signal="value_changed" from="master_volume_slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="music_volume_slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
